Ajout changement dans le login

--- a/.env
+++ b/.env
@@ -1,4 +1,13 @@
-NEXTAUTH_SECRET=your_secret_key
+DATABASE_URL=postgresql://postgres:goldnord59!@localhost:5432/Transactions
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=z3E77JG8eXx3hDCkxcj1QZVhtUV2FhaG2EpC8VDm99w
 
 EMAIL_USER=nitssei59@gmail.com
 EMAIL_PASSWORD=qdhj wxnf uvqp dxqm
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
