Ajout des fonctionnalités pour rafraîchir la liste des transactions après ajout

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ DATABASE_URL=postgresql://postgres:goldnord59!@localhost:5432/Transactions
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=z3E77JG8eXx3hDCkxcj1QZVhtUV2FhaG2EpC8VDm99w
 
-EMAIL_USER=nitssei59@gmail.com
-EMAIL_PASSWORD=qdhj wxnf uvqp dxqm
+EMAIL_USER=goldnord.digital@gmail.com
+EMAIL_PASSWORD=jdqf gfiq qytw nyuf
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
