--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL=postgresql://postgres:goldnord59!@localhost:5432/Transactions
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=http://localhost:3000/login
 NEXTAUTH_SECRET=z3E77JG8eXx3hDCkxcj1QZVhtUV2FhaG2EpC8VDm99w
 
 EMAIL_USER=goldnord.digital@gmail.com
