--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
+    "formidable": "^3.5.2",
+    "googleapis": "^148.0.0",
     "next": "^15.2.4",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
