--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DATABASE_URL=postgresql://postgres:goldnord59!@localhost:5432/Transactions
+DATABASE_URL=postgresql://postgres:Goldnordtransactions59%21@db.rixczvvzputgczbmdsgw.supabase.co:5432/postgres
+
 NEXTAUTH_URL=http://localhost:3000/login
 NEXTAUTH_SECRET=z3E77JG8eXx3hDCkxcj1QZVhtUV2FhaG2EpC8VDm99w
 
