fix bdd en ligne + tracFin

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DATABASE_URL=postgresql://postgres:Goldnordtransactions59%21@db.rixczvvzputgczbmdsgw.supabase.co:5432/postgres
 
-NEXTAUTH_URL=http://localhost:3000/login
+NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=z3E77JG8eXx3hDCkxcj1QZVhtUV2FhaG2EpC8VDm99w
 
 EMAIL_USER=goldnord.digital@gmail.com
