--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
-    "prisma": "^6.5.0",
     "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "formidable": "^3.5.2",
     "googleapis": "^148.0.0",
     "next": "^15.2.4",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
     "pdfkit": "^0.16.0",
+    "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2"
@@ -34,8 +35,5 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "typescript": "^5"
-  },
-  "overrides": {
-    "@prisma/client": "6.5.0"
   }
 }
